# DLite

./: .gitignore  README.md
boost/boost_build/lib/: libboost_atomic.dylib  libboost_chrono.dylib  libboost_container.dylib  libboost_context.dylib  libboost_coroutine.dylib  libboost_date_time.dylib  libboost_filesystem.dylib  libboost_graph.dylib  libboost_iostreams.dylib  libboost_locale.dylib  libboost_log.dylib  libboost_log_setup.dylib  libboost_math_c99.dylib  libboost_math_c99f.dylib  libboost_math_c99l.dylib  libboost_math_tr1.dylib  libboost_math_tr1f.dylib  libboost_math_tr1l.dylib  libboost_numpy.dylib  libboost_prg_exec_monitor.dylib  libboost_program_options.dylib  libboost_python.dylib  libboost_random.dylib  libboost_regex.dylib  libboost_serialization.dylib  libboost_signals.dylib  libboost_system.dylib  libboost_thread.dylib  libboost_timer.dylib  libboost_type_erasure.dylib  libboost_unit_test_framework.dylib  libboost_wave.dylib  libboost_wserialization.dylib
dlite/: CMakeLists.txt
dlite/test/: test_database.cpp
sqlite/database/: main.db
sqlite/sqlite_build/: Makefile  config.h  config.status  dbhash  fuzzcheck  lemon  libtclsqlite3.la  libtool  mkkeywordhash  sqldiff  sqlite3  sqlite3.pc  sqlite3_analyzer  srcck1  test-out.txt  testfixture
sqlite/sqlite_build/.libs/: libsqlite3.0.dylib  libtclsqlite3.dylib
sqlite/sqlite_build/testdir/: abc.db  bak.db  cmds.txt  corrupt.db  dq.db  file.db  foo.db  quota-test-A1.db  quota-test-A2.db  script.tcl  sv_test.db  sv_test.db2  test-xyz.db  test.bu  test.db  test1.db  test2  test2.db  test3.db  (+5 more)
(+17 files in other folders)
